--- a/src/app/features/family-evening/family-evening.css
+++ b/src/app/features/family-evening/family-evening.css
@@ -73,6 +73,8 @@
   left: 50%;
   top: 50%;
   transform: translate(-50%, -50%);
+    max-height: 60%;
+  overflow: scroll;
 }
 .modal-backdrop {
   position: fixed;
